# MacRootKit

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  Info.plist  MODULE.bazel  Makefile  README.md  WORKSPACE  build_app_store_crawler.sh  build_app_store_crawler_ios.sh  build_app_store_crawler_macos.sh  build_cycript_runner.sh  build_fake_corelocation_location.sh  build_inject.sh  build_ios_app_crawler.sh  build_kext.sh  build_lib.sh  build_passbookui_crawler.sh  build_test.sh  entitlements.xml  load_kext.sh  make_appstore_crawler.mk  make_appstore_crawler_ios.mk  make_appstore_crawler_macos.mk  make_inject.mk  make_ios_app_crawler.mk  make_kext.mk  make_lib.mk  make_passbookui_crawler.mk
arm64/: Assemble.cpp  Assemble.hpp  Breakpoint_arm64.s  Disassemble.cpp  Disassemble.hpp  Disassembler_arm64.cpp  Disassembler_arm64.hpp  Isa_arm64.cpp  Isa_arm64.hpp  PatchFinder_arm64.cpp  PatchFinder_arm64.hpp  arm64.cc  arm64.cpp  arm64.h  arm64.hpp  assemble.cc  assemble.h  breakpoint_arm64.s  disassemble.cc  disassemble.h  disassembler_arm64.cc  disassembler_arm64.h  isa_arm64.cc  isa_arm64.h  patch_finder_arm64.cc  patch_finder_arm64.h
capstone/: Makefile  make.sh
darwinkit/: api.c  api.h  api_util.cc  api_util.h  arch.cc  arch.h  basic_block.h  binary_format.h  control_flow_graph.h  coverage.h  dictionary.h  disassembler.cc  disassembler.h  dwarf_v5.h  error.h  hook.cc  hook.h  instruction.h  log.h  mach-o.h  macho.cc  macho.h  pac.cc  pac.h  pair.h  patcher.cc  patcher.h  payload.cc  payload.h  section.h  segment.h  strparse.cc  strparse.h  symbol.h  symbol_table.h  (+4 more)
(+283 files in other folders)
